ajustando o code smell